--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "imagesearchapi",
+  "name": "imagesearch",
   "version": "1.0.0",
-  "description": "freeCodeCamp API project",
+  "description": "Image Search API Project for freeCodeCamp",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "author": "JoshuaBurleson",
-  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JoshuaBurleson/imagesearch.git"
   },
+  "author": "Joshua Burleson",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/JoshuaBurleson/imagesearch/issues"
   },
-  "homepage": "https://github.com/JoshuaBurleson/imagesearch#readme"
+  "homepage": "https://github.com/JoshuaBurleson/imagesearch#readme",
+  "dependencies": {
+    "express": "^4.15.3",
+    "mongodb": "^2.2.28",
+    "nodemon": "^1.11.0"
+  }
 }
